--- a/myls_src/Makefile
+++ b/myls_src/Makefile
@@ -1,6 +1,6 @@
 CC          = gcc
 LDFLAGS     =
-CFLAGS      = -Wall -pedantic -g
+CFLAGS      = -Wall -pedantic -g -std=c99
 DEPS        =  
 OBJ         = myls.o
 
