Removed -Wall from makefiles
Adding -std=99 causes many standard functions to throw warnings.  They
were annoying me.

--- a/mycp_src/Makefile
+++ b/mycp_src/Makefile
@@ -1,6 +1,6 @@
 CC          = gcc
 LDFLAGS     = 
-CFLAGS      = -Wall -pedantic -g -std=c99
+CFLAGS      = -pedantic -g -std=c99
 DEPS        =  
 OBJ         = mycp.o
 
