Made some edits to myls for compatability
Added some macro flags to allow compilation on my linux machine.
Probably will not compile on mac anymore.  Going to pull down to one of
the school servers to verify that it will work there and that the
problems I solved are not unique to my own machine.

--- a/myls_src/Makefile
+++ b/myls_src/Makefile
@@ -1,20 +1,18 @@
 CC          = gcc
-LDFLAGS     =
+LDFLAGS     = -lm
 CFLAGS      = -Wall -pedantic -g
 DEPS        = myls.h
 OBJ         = myls.o print.o util.o
 CFLAGS      = -pedantic -g -std=c99
-DEPS        =  
-OBJ         = myls.o
 
 EXEC        = myls
 
 
 %.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CC) -c -o $@ $< $(CFLAGS) $(LDFLAGS)
 
 ../$(EXEC): $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS)
+	$(CC) -o $@ $^ $(CFLAGS) $(LDFLAGS)
 
 .PHONY: clean
 
