separated functions into headers

--- a/mysh_src/Makefile
+++ b/mysh_src/Makefile
@@ -1,7 +1,7 @@
 CC          = gcc
 LDFLAGS     = -lreadline
 CFLAGS      = -pedantic -g -std=c99
-DEPS        =  
+DEPS        = strings.h shell.h
 OBJ         = mysh.o
 
 EXEC        = mysh
